package com.vendingmachine;

public class Snack {
    private String name;
    private double price;
    private int quantity;

    public Snack(String name, double price, int quantity){
        this.name = name;
        this.price = price;
        this.quantity = quantity;
    }
    
    public void setName(String name) {this.name = name;}
    public void setPrice(int price) {this.price = price;}
    public void setQuantity(int quantity) {this.quantity = quantity;}

    public String getName() {return name;}
    public double getPrice() {return price;}
    public int getQuantity() {return quantity;}

    public void reduceQuantity(int amount) {quantity -= amount;}
}